# promptscan

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CITATIONS.md  Makefile  README.md  add_creative_injections.py  database.py  dataset_card.md  datasets.txt  detector.py  environment.yml  export_database.py  generate_injections.py  generate_safe_prompts.py  import.sh  import_output_json.py  model_card.md  pyproject.toml  run.sh  test_prompts.parquet  train_all.sh
config/: settings.py
data/: validation_report.md
data/hf_datasets/: MohamedRashad_ChatGPT-prompts.parquet  Octavio-Santana_prompt-injection-attack-detection-multilingual.parquet  S-Labs_prompt-injection-dataset.parquet  cgoosen_prompt_injection_ctf_dataset_2.parquet  cyberec_Prompt-injection-dataset2.parquet
models/: cnn_best.pt
prompt_detective/: cli.py  config.py  data_utils.py  detector.py  train_lstm.py  train_transformer.py  unified_detector.py
prompt_detective/ensemble/: detector.py  voting.py
prompt_detective/models/: __init__.py  base_model.py  cnn_model.py  lstm_model.py  transformer_model.py
prompt_detective/models/checkpoints/: best_model.pt  lstm_best.pt  transformer_best.pt
prompt_detective/processors/: __init__.py  subword_processor.py  word_processor.py
prompt_detective/training/: __init__.py  base_trainer.py  data_loader.py  pipeline.py
prompt_detective/training/strategies/: __init__.py  cnn_strategy.py  lstm_strategy.py  (+1 more)
prompt_detective/utils/: data_loader.py  device.py
promptscan/: __init__.py  batch_importer.py  batch_importer.py.bak  cli.py  config.py  convert_model.py  data_utils.py  detector.py  feedback_store.py  github_client.py  hf_utils.py  parquet_store.py  text_extractors.py  unified_detector.py
promptscan/ensemble/: __init__.py  detector.py
promptscan/processors/: subword_processor.py  word_processor.py
promptscan/training/: base_trainer.py  data_loader.py  pipeline.py
promptscan/utils/: __init__.py  colors.py  markdown_parser.py  memory_monitor.py  text_processor.py
scripts/: REVIEW_UNVERIFIED.md  aggregate_data.py  clean_data.py  consolidate_data.py  dedupe_unverified.py  download_hf_datasets.py  export_parquet.py  insert.py  merge_hf_datasets.py  read_parquet.py  review_unverified.py  test_fixes.py  test_review.py  train.py  unify_data.py  validate_data.py
tests/: test_detector.py
website/: CHANGES_SUMMARY.md  requirements.txt  requirements_production.txt  requirements_simple_production.txt  run.sh  test_changes.html
website/api/: main.py  run_tests.sh  test_debug.py  test_fastapi.py  test_file_upload.py  test_run_server.py  test_server.py  test_simple.py
website/config/: gunicorn.conf.py
(+13 files in other folders)
