[project]
name = "prompt-detective"
version = "0.1.0"
description = "AI-powered prompt injection detective - detect and analyze suspicious prompts"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "0xdewy"},
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["security", "ai-safety", "prompt-injection", "machine-learning", "nlp", "content-moderation"]
urls = {Homepage = "https://github.com/yourusername/prompt-detective"}

dependencies = [
    "torch>=2.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=17.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "psutil>=5.9.0",
]



[project.scripts]
prompt-detective = "prompt_detective.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["prompt_detective", "prompt_detective.models", "prompt_detective.utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pt", "*.parquet", "*.csv", "*.db", "*.yaml", "*.txt"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "mypy>=1.4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.uv]
# UV-specific configuration
link-mode = "copy"



[project.entry-points."prompt_detective.commands"]
predict = "prompt_detective.cli:predict_command"
train = "prompt_detective.cli:train_command"
export = "prompt_detective.cli:export_command"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.8",
]
